# tetris-synthwave

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md
src/: app.rs  main.rs
src/game/: board.rs  piece.rs  random.rs
src/ui/: mod.rs
tetris-synthwave/: .editorconfig  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
tetris-synthwave/src/game/: mod.rs
tetris-synthwave/src/ui/: draw.rs  panel.rs  theme.rs
tetris-synthwave/wix/: LICENSE.rtf
wix/: main.wxs
workflows/: release.yml
